fix step 1-2 layout issues

--- a/frontend/styles/base/base.css
+++ b/frontend/styles/base/base.css
@@ -33,6 +33,7 @@ a {
 
 h1 {
   font-size: 2em;
+  font-weight: 400;
 }
 
 h2 {
@@ -53,4 +54,19 @@ table {
 
 textarea {
   resize: vertical;
+}
+
+*::placeholder {
+  color: #737373;
+}
+
+.Circle {
+  align-items: center;
+  background-color: black;
+  border-radius: 50%;
+  color: white;
+  display: flex;
+  height: 37px;
+  justify-content: center;
+  width: 37px;
 }
