--- a/frontend/styles/base/utilities.css
+++ b/frontend/styles/base/utilities.css
@@ -16,6 +16,14 @@
   margin-bottom: $space-large !important;
 }
 
+.u-mtS {
+  margin-top: $space-small !important;
+}
+
+.u-mtL {
+  margin-top: $space-large !important;
+}
+
 .u-mr {
   margin-right: 12px;
 }
